--- a/supervisord.conf
+++ b/supervisord.conf
@@ -67,6 +67,31 @@ stdout_logfile=/var/log/automotive-pentest/obd.log
 stderr_logfile=/var/log/automotive-pentest/obd.log
 priority=100
 
+[program:uds-gateway]
+command=/opt/automotive-testbed/uds/uds_gateway
+directory=/opt/automotive-testbed/uds
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/automotive-pentest/uds.log
+stderr_logfile=/var/log/automotive-pentest/uds.log
+priority=150
+
+[program:can-parser]
+command=/opt/automotive-testbed/can-parser/can_frame_parser
+directory=/opt/automotive-testbed/can-parser
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/automotive-pentest/can-parser.log
+stderr_logfile=/var/log/automotive-pentest/can-parser.log
+priority=150
+
+[eventlistener:crash-monitor]
+command=python3 /opt/automotive-testbed/crash-monitor/monitor.py
+events=PROCESS_STATE_EXITED,PROCESS_STATE_FATAL
+buffer_size=100
+stdout_logfile=/var/log/automotive-pentest/crash-monitor.log
+stderr_logfile=/var/log/automotive-pentest/crash-monitor.log
+
 [program:icsim]
 command=/opt/icsim/icsim vcan0
 directory=/opt/icsim
